[gd_scene load_steps=5 format=2]

[ext_resource path="res://Encuesta.gd" type="Script" id=1]
[ext_resource path="res://QPF_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fondo.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 2 )

[node name="Encuesta" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 16.0
margin_top = 50.0
margin_right = 704.0
margin_bottom = 1226.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 688.0
margin_bottom = 1176.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="LabelTitle" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 688.0
margin_bottom = 204.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = -1
text = "Pregunta 5: ¿Le recomendarías a un amigo que lo juegue? "
autowrap = true

[node name="MCRtas" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 688.0
margin_bottom = 1176.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBRtas" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MCRtas"]
margin_right = 688.0
margin_bottom = 922.0
size_flags_vertical = 3
alignment = 1

[node name="LabelMessage" type="Label" parent="."]
margin_left = 19.0
margin_top = 271.0
margin_right = 704.0
margin_bottom = 875.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = -1
text = "Ayudanos a mejorar el juego respondiendo una serie de preguntas"
valign = 1
autowrap = true

[node name="LabelMessageTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Fondo" parent="." instance=ExtResource( 3 )]
[connection signal="timeout" from="LabelMessageTimer" to="." method="_on_LabelMessageTimer_timeout"]
